--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,19 +9,23 @@ permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-and-test:
     strategy:
       matrix:
         include:
-          - goos: darwin
+          - os: macos-13
+            goos: darwin
             goarch: amd64
-          - goos: darwin
+          - os: macos-latest
+            goos: darwin
             goarch: arm64
-          - goos: linux
+          - os: ubuntu-latest
+            goos: linux
             goarch: amd64
-          - goos: linux
+          - os: ubuntu-24.04-arm
+            goos: linux
             goarch: arm64
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
@@ -37,12 +41,18 @@ jobs:
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
       - name: Build
-        env:
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
         run: |
           mkdir -p dist
           go build -ldflags="-s -w" -o dist/pomodoro-cli ./cmd/pomodoro
+
+      - name: Test binary
+        run: |
+          ./dist/pomodoro-cli --version
+          ./dist/pomodoro-cli --help
+          ./dist/pomodoro-cli config
+
+      - name: Create archive
+        run: |
           cd dist
           tar -czvf pomodoro-cli-${{ steps.version.outputs.VERSION }}-${{ matrix.goos }}-${{ matrix.goarch }}.tar.gz pomodoro-cli
           rm pomodoro-cli
@@ -54,7 +64,7 @@ jobs:
           path: dist/*.tar.gz
 
   release:
-    needs: build
+    needs: build-and-test
     runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
